objects/APTS_Cost_Model__c.object
<CustomObject>
    <fields>
        <fullName>APTS_APP_Id__c</fullName>
        <label>APP Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Advanced_Criteria__c</fullName>
        <label>Advanced Criteria</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Cost_Model_Description__c</fullName>
        <label>Cost Model Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Cost_Model_label__c</fullName>
        <label>Cost Model label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Cost_model_Document__c</fullName>
        <label>Cost model Document</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Org_Unit_Currency__c</fullName>
        <label>Org Unit Currency</label>
        <picklist>
            <picklistValues>
                <fullName>INR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Org_Unit_Id__c</fullName>
        <label>Org Unit Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Category__c</fullName>
        <label>Product Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Field__c</fullName>
        <label>Product Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Cost Models</relationshipLabel>
        <relationshipName>Cost_Models</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Cost Model</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CM-{0000000000}</displayFormat>
        <label>Cost Model Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cost Models</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>